--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -188,7 +188,7 @@
                     <!-- divider end -->
                     <!-- section subtitle start -->
                     <h2>
-                        Where innovation meets technology
+                        "Beyond Innovation"
                     </h2>
                     <!-- section subtitle end -->
                 </div>
@@ -279,7 +279,7 @@
                         <div class="col-md-6 col-sm-12">
                             <!-- section txt start -->
                             <h1 class="section-header">
-                                Techie <span>Stuff</span> &amp; <span>Tinkering</span> Innovations <span>Robotics</span> Latest Technology <span>high-end</span> Tech Machines.
+                                The only way to <span>Discover</span> <span>The limtit of the</span> Possible <span>Is to go beyond them into</span> the <span>Impossible</span>
                             </h1>
                             <!-- section txt end -->
                         </div>
