few major changes

--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -174,7 +174,7 @@
                                 <a class="ion-social-facebook" href="https://www.facebook.com/atl.sajs/" target="_blank"><span>Facebook</span></a>
                             </li>
                             <li>
-                                <a class="ion-social-instagram" href="https://www.instagram.com/atl_sajs/" target="_blank"><span>Instagram</span></a>
+                                <a class="ion-social-instagram" href="https://www.instagram.com/tink.ethix/" target="_blank"><span>Instagram</span></a>
                             </li>
                         </ul>
                     </div>
@@ -192,7 +192,7 @@
                     <!-- divider end -->
                     <!-- section subtitle start -->
                     <h2>
-                        "Beyond Innovation"
+                       
                     </h2>
                     <!-- section subtitle end -->
                 </div>
@@ -1319,8 +1319,7 @@
                         <div class="col-md-6 col-sm-12">
                             <!-- section txt start -->
                             <h1 class="section-header">
-                                Please send an e-mail at the <span>address provided below</span> or feel free to <span><a class="link-underline-contact contact-modal-launcher link-effect link-effect-contact" href=
-                                    "#">use the form</a></span>.
+                                Please send an e-mail at the <span>address provided below</span>.
                             </h1>
                             <!-- section txt end -->
                         </div>
