aryaansh image commit

--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -607,11 +607,11 @@
                                                     <div class="image-works">
                                                         <div class="hover-effect"></div>
                                                         <div class="icon-works">
-                                                            <a class="popup-photo" href="./img/Aryansh_img.png" title="Developer, Designer">
+                                                            <a class="popup-photo" href="./img/Aryaansh.jpeg" title="Developer, Designer">
                                                             <i class="iw-slide ion-plus"></i>
                                                             </a>
                                                         </div>
-                                                        <img alt="Img" src="./img/Aryansh_img.png">
+                                                        <img alt="Img" src="./img/Aryaansh.jpeg">
                                                     </div>
                                                 </div>
                                             </div>
