--- a/Tinkethix/contact.html
+++ b/Tinkethix/contact.html
@@ -26,6 +26,16 @@
             <source src="./ test.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
+          <!-- preloader start -->
+        <div class="preloader-bg"></div>
+        <div id="preloader">
+            <div id="preloader-status">
+                <div class="preloader-position loader">
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <!-- preloader end -->
         <!-- navigation start -->
         <!-- navigation button start -->
         <div class="round-menu-wrapper">
