--- a/Tinkethix/about.html
+++ b/Tinkethix/about.html
@@ -26,7 +26,16 @@
             <source src="./ test.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
-          
+          <!-- preloader start -->
+        <div class="preloader-bg"></div>
+        <div id="preloader">
+            <div id="preloader-status">
+                <div class="preloader-position loader">
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <!-- preloader end -->
          <!-- navigation start -->
         <!-- navigation button start -->
         <div class="round-menu-wrapper">
@@ -57,9 +66,7 @@
                             <li>
                                 <a class="navigation-state" href="./achievements.html" target="_blank">Achievements</a>                            
                             </li>
-                            <li>
-                                <a class="navigation-state" href="./achievements.html" target="_blank">Projects/Innovation</a>                            
-                            </li>
+                            
                             <li>
                                 <a class="navigation-state" href="./contact.html" target="_blank">Contact</a>                            
                             </li>
