--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -29,6 +29,7 @@
             <source src="./WhatsApp Video 2022-10-25 at 6.26.00 PM.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
+          <embed name="myMusic" loop="true" hidden="true" src="./img/sound.mp3"></embed>
         <!-- preloader start -->
         <div class="preloader-bg"></div>
         <div id="preloader">
