--- a/Tinkethix/about.html
+++ b/Tinkethix/about.html
@@ -20,13 +20,14 @@
         <!-- google fonts start -->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7COswald:300,400,700" rel="stylesheet" type="text/css">
         <!-- google fonts end -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <video autoplay muted loop id="myVideo">
-            <source src="./ test.mp4" type="video/mp4">
+            <source src="./2-vid.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
-          <!-- preloader start -->
+         <!-- preloader start -->
         <div class="preloader-bg"></div>
         <div id="preloader">
             <div id="preloader-status">
