--- a/Tinkethix/achievements.html
+++ b/Tinkethix/achievements.html
@@ -23,7 +23,7 @@
     </head> 
     <body>
       <video autoplay muted loop id="myVideo">
-        <source src="./ test.mp4" type="video/mp4">
+        <source src="./2-vid.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
       <!-- preloader start -->
@@ -60,9 +60,9 @@
                           <li>
                               <a class="navigation-state active" href="./index.html" target="_blank">Home</a>                            
                           </li>
-                          <li>
+                         <!-- <li>
                               <a class="navigation-state" href="./about.html" target="_blank">About</a>                            
-                          </li>
+                          </li> -->
                           <li>
                               <a class="navigation-state" href="./achievements.html" target="_blank">Achievements</a>                            
                           </li>
