--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I am a Student of Class: 10th - F in Seth Anandram Jaipuria School Vasundhara,
+                      I am a Student of Class: 11th - B in Seth Anandram Jaipuria School Vasundhara,
                       I have intermediate-level knowledge in Programming, 
                       Networking, Robotics and Website Development.
                     </p>
