--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Ishan Srivastava</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Student, Developer , Hacker  , Editor"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Student, Innovator"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -126,7 +126,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I am a Student of Class: 11th - B in Seth Anandram Jaipuria School Vasundhara,
+                      I am a Student of Class: 12th - B in Seth Anandram Jaipuria School Vasundhara,
                       I have intermediate-level knowledge in Programming, 
                       Networking, Robotics and Website Development.
                     </p>
@@ -177,7 +177,7 @@
               <div class="service-content">
                 <h2 class="s-title">Programming</h2>
                 <p class="s-description text-center">
-                  I have knowledge in Programming Languages 
+                  I know Programming Languages 
                   Like Python and C++ and 
                   intermediate logic making and loops.
                 </p>
@@ -192,7 +192,7 @@
               <div class="service-content">
                 <h2 class="s-title">Web Development</h2>
                 <p class="s-description text-center">
-                  I have knowledge of basics of Web Development. 
+                  I know basics of Web Development. 
                   This includes HTML, CSS and javascript, 
                   Which I got to learn by making websites
                 </p>
@@ -207,7 +207,7 @@
               <div class="service-content">
                 <h2 class="s-title">Robotics</h2>
                 <p class="s-description text-center">
-                  I have intermidiate level knowledge of robotics. 
+                  I have intermediate level knowledge of robotics. 
                   I know how to operate devices like sensors and motors 
                   using controllers. I am also working on IoT and 
                   have developed few of its projects.
